--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -24,23 +24,53 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/logo_256" />
 
-        <ImageView
+        <FrameLayout
             android:id="@+id/imageView2"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/black_256" />
+            app:layout_constraintTop_toTopOf="@+id/ivPlayerSelector">
 
-        <ImageView
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                app:srcCompat="@drawable/black_256" />
+
+            <TextView
+                android:id="@+id/tvPlayer1Score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:text="0"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+        </FrameLayout>
+
+
+
+        <FrameLayout
             android:id="@+id/imageView3"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/white_256" />
+            app:layout_constraintTop_toTopOf="@+id/ivPlayerSelector">
+            <ImageView
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                app:srcCompat="@drawable/white_256" />
+
+            <TextView
+                android:id="@+id/tvPlayer2Score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:text="0"
+                android:textColor="#4E4D4D"
+                android:textSize="20sp" />
+        </FrameLayout>
+
 
         <TextView
             android:id="@+id/blackNum"
