--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -89,14 +89,13 @@
             app:srcCompat="@drawable/ic_navigation" />
 
 
-
-
-
         <TextView
             android:id="@+id/tvPlayer1Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Player1"
+            android:text="Player 1"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/imageView2"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
             app:layout_constraintStart_toStartOf="@+id/imageView2" />
@@ -105,7 +104,9 @@
             android:id="@+id/tvPlayer2Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Player2"
+            android:text="Player 2"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="@+id/imageView3"
             app:layout_constraintStart_toStartOf="@+id/imageView3" />
